<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/numberView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="400dp"
        android:textAlignment="center"
        android:textSize="26sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="999999999" />

    <Button
        android:id="@+id/button1"
        android:layout_width="120dp"
        android:layout_height="60dp"
        android:layout_marginBottom="20dp"
        android:text="@string/_1"
        app:layout_constraintBottom_toTopOf="@id/button4"
        app:layout_constraintEnd_toStartOf="@+id/button2"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button2"
        android:layout_width="120dp"
        android:layout_height="60dp"
        android:layout_marginBottom="20dp"
        android:text="@string/_2"
        app:layout_constraintBottom_toTopOf="@+id/button5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button3"
        android:layout_width="120dp"
        android:layout_height="60dp"
        android:layout_marginBottom="20dp"
        android:text="@string/_3"
        app:layout_constraintBottom_toTopOf="@id/button6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button2" />

    <Button
        android:id="@+id/button4"
        android:layout_width="120dp"
        android:layout_height="60dp"
        android:layout_marginBottom="20dp"
        android:text="@string/_4"
        app:layout_constraintBottom_toTopOf="@id/button7"
        app:layout_constraintEnd_toStartOf="@+id/button5"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button5"
        android:layout_width="120dp"
        android:layout_height="60dp"
        android:layout_marginBottom="20dp"
        android:text="@string/_5"
        app:layout_constraintBottom_toTopOf="@id/button8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button6"
        android:layout_width="120dp"
        android:layout_height="60dp"
        android:layout_marginBottom="20dp"
        android:text="@string/_6"
        app:layout_constraintBottom_toTopOf="@id/button9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button5" />

    <Button
        android:id="@+id/button7"
        android:layout_width="120dp"
        android:layout_height="60dp"
        android:layout_marginBottom="20dp"
        android:text="@string/_7"
        app:layout_constraintBottom_toTopOf="@id/buttonDial"
        app:layout_constraintEnd_toStartOf="@+id/button8"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button8"
        android:layout_width="120dp"
        android:layout_height="60dp"
        android:layout_marginBottom="20dp"
        android:text="@string/_8"
        app:layout_constraintBottom_toTopOf="@id/button0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button9"
        android:layout_width="120dp"
        android:layout_height="60dp"
        android:layout_marginBottom="20dp"
        android:text="@string/_9"
        app:layout_constraintBottom_toTopOf="@id/buttonErase"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/button8" />

    <Button
        android:id="@+id/buttonDial"
        android:layout_width="120dp"
        android:layout_height="60dp"
        android:layout_marginBottom="20dp"
        android:text="@string/dial"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button0"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button0"
        android:layout_width="120dp"
        android:layout_height="60dp"
        android:layout_marginBottom="20dp"
        android:text="@string/_0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/buttonErase"
        android:layout_width="120dp"
        android:layout_height="60dp"
        android:layout_marginBottom="20dp"
        android:text="@string/erase"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button0" />





</androidx.constraintlayout.widget.ConstraintLayout>